--- a/packages/svrx-ui-client/public/index.html
+++ b/packages/svrx-ui-client/public/index.html
@@ -19,6 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link rel="stylesheet"
+          href="./bootstrap.min.css"
+          crossorigin="anonymous">
     <title>React App</title>
   </head>
   <body>
