--- a/packages/svrx-ui-client/public/index.html
+++ b/packages/svrx-ui-client/public/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet"
           href="./bootstrap.min.css"
           crossorigin="anonymous">
-    <title>React App</title>
+    <title>Server-X Settings</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
